compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_method_snapshots@empty_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"impl Test { fn test<>() -> void {} }\")"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        0..4,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Test",
                            location: Location(
                                5..9,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            5..9,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Private(
                        Private {
                            location: Location(
                                12..14,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "test",
                        location: Location(
                            15..19,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "void",
                                        location: Location(
                                            27..31,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        27..31,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [],
                        location: Location(
                            32..34,
                        ),
                    },
                    location: Location(
                        12..34,
                    ),
                    documentation: None,
                },
            ],
            type_parameters: [],
            location: Location(
                0..36,
            ),
        },
    ),
]
