compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_method_snapshots@missing_comma.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"class Test { fn test<T1 T2>() -> void {} }\")"
---
UnexpectedToken {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "class Test { fn test<T1 T2>() -> void {} }",
        package: PackageId(
            0,
        ),
    },
    range: 24..26,
    expected: ,,
    actual: identifier,
}
