compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_method_snapshots@single_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"class Test { fn test<T>() -> void {} }\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        6..10,
                    ),
                },
                builtin: false,
                members: [
                    MethodDefinition(
                        MethodDefinition {
                            visibility: Private(
                                Private {
                                    location: Location(
                                        13..15,
                                    ),
                                },
                            ),
                            external: false,
                            name: Identifier {
                                name: "test",
                                location: Location(
                                    16..20,
                                ),
                            },
                            parameters: [],
                            type_parameters: [
                                TypeParameter {
                                    name: Identifier {
                                        name: "T",
                                        location: Location(
                                            21..22,
                                        ),
                                    },
                                },
                            ],
                            return_type: Scalar(
                                ScalarType {
                                    name: "void",
                                    location: Location(
                                        29..33,
                                    ),
                                },
                            ),
                            block: Block {
                                statements: [],
                                location: Location(
                                    34..36,
                                ),
                            },
                            location: Location(
                                13..36,
                            ),
                        },
                    ),
                ],
                type_parameters: [],
                location: Location(
                    0..38,
                ),
            },
        ),
    ),
]
