compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_struct_snapshots@constrained_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"struct Test<T: Numeric> {}\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        7..11,
                    ),
                },
                properties: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T",
                            location: Location(
                                12..13,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: Path {
                                        name: Identifier {
                                            name: "Numeric",
                                            location: Location(
                                                15..22,
                                            ),
                                        },
                                        root: NamespacePath {
                                            path: [],
                                            location: Location(
                                                0..0,
                                            ),
                                        },
                                        location: Location(
                                            15..22,
                                        ),
                                    },
                                },
                            ),
                        ],
                    },
                ],
                location: Location(
                    0..26,
                ),
                documentation: None,
            },
        ),
    ),
]
