compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_struct_snapshots@constrained_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"struct Test<T1: Numeric, T2: Numeric> {}\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        7..11,
                    ),
                },
                properties: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                12..14,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: Path {
                                        name: Identifier {
                                            name: "Numeric",
                                            location: Location(
                                                16..23,
                                            ),
                                        },
                                        root: NamespacePath {
                                            path: [],
                                            location: Location(
                                                0..0,
                                            ),
                                        },
                                        location: Location(
                                            16..23,
                                        ),
                                    },
                                },
                            ),
                        ],
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                25..27,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: Path {
                                        name: Identifier {
                                            name: "Numeric",
                                            location: Location(
                                                29..36,
                                            ),
                                        },
                                        root: NamespacePath {
                                            path: [],
                                            location: Location(
                                                0..0,
                                            ),
                                        },
                                        location: Location(
                                            29..36,
                                        ),
                                    },
                                },
                            ),
                        ],
                    },
                ],
                location: Location(
                    0..40,
                ),
                documentation: None,
            },
        ),
    ),
]
